Fix a visual bug where the left and right menus could overlap the player hand. Plus some features for token bags for future games.

--- a/src/ContextualOptionsMenu.scss
+++ b/src/ContextualOptionsMenu.scss
@@ -1,3 +1,4 @@
+@import "./mixins/variables";
 @import "./mixins/devices";
 
 $menuWidth: 95px;
@@ -11,7 +12,7 @@ $menuWidth: 95px;
   position: absolute;
   top: 0;
   right: 0;
-  max-height: 100%;
+  max-height: calc(100% - $playerHandPx);
   overflow-y: auto;
   padding: 5px 5px;
   background-color: gray;
