--- a/src/OptionsMenu.scss
+++ b/src/OptionsMenu.scss
@@ -1,3 +1,4 @@
+@import "./mixins/variables";
 @import "./mixins/devices";
 
 .options-menu {
@@ -9,7 +10,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  max-height: 100%;
+  max-height: calc(100% - $playerHandPx);
   overflow-y: auto;
   padding: 5px 5px;
   background-color: gray;
